--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand " href="index.html">
-             <img src="./images/logo.png" alt="DAG Web Oficial"/>
+             <img src="./images/logoBlanco.png" alt="DAG Web Oficial"/>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -94,11 +94,11 @@
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-lg-7 text-center col-sm-12 element-animate">
-              <h3 class="mb-4"><span>Nos basamos en:</span></h1>
+              <h3 class="mb-4 text-white"><span>Nos basamos en:</span></h1>
               <div class="mb-5 ">
                 <ul>
-                  <li class="text-left">Nuestra amplia red de proveedores</li>
-                  <li class="text-left">Nuestra agilidad para relacionarnos con nuevas y diversas fuentes de abastecimiento</li>
+                  <li class="text-left"> <p class="font-italic">Nuestra amplia red de proveedores.</p></li>
+                  <li class="text-left"> <p class="font-italic">Nuestra agilidad para relacionarnos con nuevas y diversas fuentes de abastecimiento.</p></li>
                 </ul>
               </div>
             </div>
@@ -454,13 +454,15 @@
 
           </div>
           <div class="col-md-5 mb-5 pl-md-5">
-            <h3>Contact Info</h3>
+            <h3>Contacto</h3>
+            <p>Realizar la consulta, el requerimiento o el pedido de cotización, a la brevedad nos pondremos en contacto.</p>
             <ul class="list-unstyled footer-link">
               <li class="d-block">
-                <span class="d-block">Address:</span>
-                <span >34 Street Name, City Name Here, United States</span></li>
-              <li class="d-block"><span class="d-block">Telephone:</span><span >+1 242 4942 290</span></li>
-              <li class="d-block"><span class="d-block">Email:</span><span >info@yourdomain.com</span></li>
+                <span class="d-block">Contacto:</span>
+                <span >Ing. Cristian Rother. <br> cristian.rother@dagsrl.com.ar
+                </span></li>
+              <li class="d-block"><span class="d-block">Telefono:</span><span >+54 9 221 317-2945 <br><p>(Link directo para escribirle por Whatsapp a Cristian).</p></span></li>
+              <li class="d-block"><span class="d-block">Otro Medio:</span><span >info@dagsrl.com.ar</span></li>
             </ul>
           </div>
           <div class="col-md-3 mb-5">
