--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
               <h3 class="mb-4 text-white"><span>Nos basamos en:</span></h1>
               <div class="mb-5 ">
                 <ul>
-                  <li class="text-left"> <p class="font-italic">Nuestra amplia red de proveedores.</p></li>
-                  <li class="text-left"> <p class="font-italic">Nuestra agilidad para relacionarnos con nuevas y diversas fuentes de abastecimiento.</p></li>
+                  <li class="text-left"> <p>Nuestra amplia red de proveedores.</p></li>
+                  <li class="text-left"> <p>Nuestra agilidad para relacionarnos con nuevas y diversas fuentes de abastecimiento.</p></li>
                 </ul>
               </div>
             </div>
