--- a/index.html
+++ b/index.html
@@ -461,8 +461,16 @@
                 <span class="d-block">Contacto:</span>
                 <span >Ing. Cristian Rother. <br> cristian.rother@dagsrl.com.ar
                 </span></li>
-              <li class="d-block"><span class="d-block">Telefono:</span><span >+54 9 221 317-2945 <br><p>(Link directo para escribirle por Whatsapp a Cristian).</p></span></li>
-              <li class="d-block"><span class="d-block">Otro Medio:</span><span >info@dagsrl.com.ar</span></li>
+              <li class="d-block">
+                <span class="d-block">
+                  Telefono:
+                </span>
+                <a href="http://wa.link/hd56lb" target="_blank">+54 9 221 317-2945</a>
+              </li>
+              <li class="d-block">
+                <span class="d-block">Otro Medio:</span>
+                <a href="mailto:info@dagsrl.com.ar">info@dagsrl.com.ar</a>
+              </li>
             </ul>
           </div>
           <div class="col-md-3 mb-5">
