cambios en seccion nuestros pilares

--- a/index.html
+++ b/index.html
@@ -111,38 +111,37 @@
     </section>
     <!-- END slider -->
     </div>
-    
+    <section class="section border-t pb-0">
+      <div class="container">
+        <div class="row justify-content-center mb-5 element-animate">
+          <div class="col-md-8 text-center">
+            <h2 class=" heading mb-4">Nosotros</h2>
+            <p class="mb-5 lead">Somos un equipo de profesionales (Ingenieros Industriales / MBA) con amplio recorrido en compañías multinacionales, tanto en el ámbito local como en el exterior del país. Tenemos experiencia en Supply Chain Management, Gestión de Compras, Gestión de Proyectos, Logística, Mejora de Procesos, etc</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="section bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4 element-animate ">
+          <div class="col-md-6 col-lg-6 element-animate ">
             <div class="media block-6 d-block text-center">
               <div class="icon mb-3"><span class="ion-bookmark text-primary"></span></div>
               <div class="media-body">
-                <h3 class="heading">Automotive Parts</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">MISIÓN</h3>
+                <p>Abastecer de todo tipo de materiales, insumos y productos a nuestros clientes.</p>
               </div>
             </div>  
 
           </div>
-          <div class="col-md-6 col-lg-4 element-animate ">
+          <div class="col-md-6 col-lg-6 element-animate ">
             <div class="media block-6 d-block text-center">
-              <div class="icon mb-3"><span class="ion-heart text-primary"></span></div>
+              <div class="icon mb-3"><span class="on ion-android-bulb text-primary"></span></div>
               <div class="media-body">
-                <h3 class="heading">Maintenance Services</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">VISIÓN</h3>
+                <p>Ser socio estratégico de nuestros clientes, encargado de satisfacer los requerimientos de abastecimiento de materiales, insumos y productos; teniendo desarrollada una diversa y completa red de proveedores.</p>
               </div>
-            </div> 
-
-          </div>
-          <div class="col-md-6 col-lg-4 element-animate ">
-            <div class="media block-6 d-block text-center">
-              <div class="icon mb-3"><span class="ion-leaf text-primary"></span></div>
-              <div class="media-body">
-                <h3 class="heading">Green Energy</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
-            </div> 
+            </div>  
 
           </div>
         </div>
@@ -154,7 +153,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
-            <h2>We Are Reliable Engineering In House</h2>
+            <h2>Nuestros Pilares</h2>
           </div>
         </div>
         <div class="row align-items-stretch">
