--- a/index.html
+++ b/index.html
@@ -179,6 +179,14 @@
               </div>
             </div>
 
+            <div class="feature-1 d-md-flex">
+              <div class="align-self-center">
+                <span class="ion ion-android-bulb display-4 text-primary"></span>
+                <h3>Precision Mechanics</h3>
+                <p>Even the all-powerful Pointing has no control about the blind texts.</p>
+              </div>
+            </div>
+
           </div>
           
           <div class="col-md-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-3" >
