Agregamos en Seccion Pilares

--- a/index.html
+++ b/index.html
@@ -165,25 +165,26 @@
 
             <div class="feature-1 d-md-flex">
               <div class="align-self-center">
-                <span class="ion ion-leaf display-4 text-primary"></span>
-                <h3>Green Energy</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts.</p>
+                <span class="ion ion-ios-paper display-4 text-primary"></span>
+                <h3>RESPONSABILIDAD 
+                </h3>
+                <p>Trabajamos con profesionalismo para alcanzar los mejores resultados.</p>
+              </div>
+            </div>
+
+            <div class="feature-1 d-md-flex">
+              <div class="align-self-center">
+                <span class="ion ion-android-time display-4 text-primary"></span>
+                <h3>AGILIDAD</h3>
+                <p>Brindamos la solución adecuada en tiempo y forma, para satisfacer las necesidades de nuestros clientes.</p>
               </div>
             </div>
 
             <div class="feature-1 d-md-flex">
               <div class="align-self-center">
                 <span class="ion ion-android-bulb display-4 text-primary"></span>
-                <h3>Precision Mechanics</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts.</p>
-              </div>
-            </div>
-
-            <div class="feature-1 d-md-flex">
-              <div class="align-self-center">
-                <span class="ion ion-android-bulb display-4 text-primary"></span>
-                <h3>Precision Mechanics</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts.</p>
+                <h3>VERSATILIDAD</h3>
+                <p>Tenemos capacidad para adaptarnos fácilmente a los diferentes requerimientos.</p>
               </div>
             </div>
 
@@ -193,17 +194,17 @@
 
             <div class="feature-1 d-md-flex">
               <div class="align-self-center">
-                <span class="ion ion-alert-circled display-4 text-primary"></span>
-                <h3>Construction Machines</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts.</p>
+                <span class="ion ion-android-happy display-4 text-primary"></span>
+                <h3>CONFIANZA</h3>
+                <p>Somos fiables en todas las direcciones, respetamos los compromisos y a la gente.</p>
               </div>
             </div>
 
             <div class="feature-1 d-md-flex">
               <div class="align-self-center">
-                <span class="ion ion-android-happy display-4 text-primary"></span>
-                <h3>Reliable and Stable</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts.</p>
+                <span class="ion ion-android-hand display-4 text-primary"></span>
+                <h3>HONESTIDAD</h3>
+                <p>Mantenemos una fluida y clara comunicación con nuestros clientes y proveedores.</p>
               </div>
             </div>
 
