--- a/index.html
+++ b/index.html
@@ -38,20 +38,6 @@
                 <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="projects.html">Projects</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="services.html">Architectural Design</a>
-                  <a class="dropdown-item" href="services.html">Interior</a>
-                  <a class="dropdown-item" href="services.html">Building</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blog.html">Blog</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
@@ -204,28 +190,21 @@
     <!-- Clientes -->
     <section class="section bg-light block-11">
       <div class="container"> 
-        <div class="row justify-content-center mb-5">
+        <div class="row justify-content-center">
           <div class="col-md-8 text-center">
-            <h2 class=" heading mb-4">Clientes</h2>
+            <h2 class=" heading">Clientes</h2>
           </div>
         </div>
         <div class="nonloop-block-11 owl-carousel">
           <div class="item">
-            <div class="block-33 h-100">
-                <div class="vcard d-flex mb-3">
-                  <div class="image align-self-center"><img src="images/person_3.jpg" alt="Person here"></div>
-                  <div class="name-text align-self-center">
-                    <h2 class="heading">John Smith</h2>
-                    <span class="meta">Companies Client</span>
-                  </div>
-                </div>
-                <div class="text">
-                  <blockquote>
-                    <p>&rdquo; The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. &ldquo;</p>
-                  </blockquote>
-                </div>
-              </div>
-          </div>          
+            <div class="cliente-slide" style="background-image: url(./images/slides/Copelco.png);"></div>
+          </div>  
+
+          <div class="item">
+            <div class="cliente-slide" style="background-image: url(./images/slides/Burgwardt.jpg);"></div>
+          </div>
+
+          <!-- Aca el resto ... -->
         </div>
       </div>
     </div>
@@ -250,7 +229,7 @@
     <footer class="site-footer" role="contentinfo">
       <div class="container">
         <div class="row mb-5">
-          <div class="col-md-4 mb-5">
+          <div class="col-md-4 mb-5 offset-md-2">
             <h3>About Us</h3>
             <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. .</p>
             <ul class="list-unstyled footer-link d-flex footer-social">
@@ -261,7 +240,7 @@
             </ul>
 
           </div>
-          <div class="col-md-5 mb-5 pl-md-5">
+          <div class="col-md-4 mb-5 pl-md-5 offset-md-1">
             <h3>Contacto</h3>
             <p>Realizar la consulta, el requerimiento o el pedido de cotización, a la brevedad nos pondremos en contacto.</p>
             <ul class="list-unstyled footer-link">
@@ -280,18 +259,6 @@
                 <a href="mailto:info@dagsrl.com.ar">info@dagsrl.com.ar</a>
               </li>
             </ul>
-          </div>
-          <div class="col-md-3 mb-5">
-            <h3>Quick Links</h3>
-            <ul class="list-unstyled footer-link">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Terms of Use</a></li>
-              <li><a href="#">Disclaimers</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-          
           </div>
         </div>
         <div class="row">
