Slider en clientes

--- a/index.html
+++ b/index.html
@@ -198,7 +198,19 @@
         <div class="nonloop-block-11 owl-carousel">
           <div class="item">
             <div class="cliente-slide" style="background-image: url(./images/slides/Copelco.png);"></div>
+          </div> 
+          <div class="item">
+            <div class="cliente-slide" style="background-image: url(./images/slides/Hidrocinetic.png);"></div>
           </div>  
+          <div class="item">
+            <div class="cliente-slide" style="background-image: url(./images/slides/lo.png);"></div>
+          </div>  
+          <div class="item">
+            <div class="cliente-slide" style="background-image: url(./images/slides/manpetrol.jpg);"></div>
+          </div>  
+          <div class="item">
+            <div class="cliente-slide" style="background-image: url(./images/slides/logo.png);"></div>
+          </div>   
 
           <div class="item">
             <div class="cliente-slide" style="background-image: url(./images/slides/Burgwardt.jpg);"></div>
