--- a/index.html
+++ b/index.html
@@ -32,13 +32,19 @@
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav pl-md-5 ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link active" href="#top">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link active" href="#nosotros">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link active" href="#pilares">Pilares</a>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#clientes">Clientes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#contacto">contecto</a>
+                </li>
               </li>
             </ul>
           </div>
@@ -47,7 +53,7 @@
     </header>
     <!-- Slider Home-->
     <div class="top-shadow"></div>
-      <section class="home-slider owl-carousel">   
+      <section class="home-slider owl-carousel"id="top">   
         <div class="slider-item" >
           <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
@@ -86,7 +92,7 @@
       </section>
     </div>
     <!-- Nostros -->
-    <section class="section border-t pb-0">
+    <section class="section border-t pb-0" id="nosotros">
       <div class="container">
         <div class="row justify-content-center mb-5 element-animate">
           <div class="col-md-8 text-center">
@@ -123,7 +129,7 @@
       </div>
     </section>
     <!-- Pilares -->
-    <section class="section">
+    <section class="section" id="pilares">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
@@ -188,7 +194,7 @@
       </div>
     </section>
     <!-- Clientes -->
-    <section class="section bg-light block-11">
+    <section class="section bg-light block-11" id="clientes">
       <div class="container"> 
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
@@ -224,7 +230,7 @@
     </section>
 
     <!-- Contacto -->
-    <section class="section bg-primary">
+    <section class="section bg-primary" id="contacto">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-8">
