--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <a class="nav-link active" href="#clientes">Clientes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#contacto">contecto</a>
+                  <a class="nav-link active" href="#contacto">Contacto</a>
                 </li>
               </li>
             </ul>
