--- a/index.html
+++ b/index.html
@@ -217,28 +217,24 @@
           <div class="item">
             <div class="cliente-slide" style="background-image: url(./images/slides/logo.png);"></div>
           </div>   
-
           <div class="item">
             <div class="cliente-slide" style="background-image: url(./images/slides/Burgwardt.jpg);"></div>
           </div>
-
-          <!-- Aca el resto ... -->
         </div>
       </div>
     </div>
     <!-- END .block-4 -->
     </section>
-
     <!-- Contacto -->
     <section class="section bg-primary" id="contacto">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-8">
-            <h2 class="text-white mb-0">Create, Enhance and Sustain</h2>
-            <p class="text-white lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. .</p>
+            <h2 class="text-white mb-0">Contacto</h2>
+            <p class="text-white lead">Responderemos a la brevedad</p>
           </div>
           <div class="col-lg-4 text-lg-right">
-            <a href="https://free-template.co/" class="btn btn-outline-white px-4 py-3">Download This Template</a>
+            <a href="mailto:info@dagsrl.com.ar" class="btn btn-outline-white px-4 py-3">Correo</a>
           </div>
         </div>
       </div>
