Back to top button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
   </head>
   <body>
+    <!-- Back to top button -->
+    <a id="button"></a>
+    <!-- Slider -->
     <header role="banner">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -113,7 +116,6 @@
                 <p>Abastecer de todo tipo de materiales, insumos y productos a nuestros clientes.</p>
               </div>
             </div>  
-
           </div>
           <div class="col-md-6 col-lg-6 element-animate ">
             <div class="media block-6 d-block text-center">
@@ -123,7 +125,6 @@
                 <p>Ser socio estratégico de nuestros clientes, encargado de satisfacer los requerimientos de abastecimiento de materiales, insumos y productos; teniendo desarrollada una diversa y completa red de proveedores.</p>
               </div>
             </div>  
-
           </div>
         </div>
       </div>
