--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
             <h2 class="text-white mb-0">Contacto</h2>
             <p class="text-white lead">Responderemos a la brevedad</p>
           </div>
-          <div class="col-lg-4 text-lg-right">
+         <!-- <div class="col-lg-4 text-lg-right">
             <a href="mailto:info@dagsrl.com.ar" class="btn btn-outline-white px-4 py-3">Correo</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -244,17 +244,6 @@
     <footer class="site-footer" role="contentinfo">
       <div class="container">
         <div class="row mb-5">
-          <div class="col-md-4 mb-5 offset-md-2">
-            <h3>About Us</h3>
-            <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. .</p>
-            <ul class="list-unstyled footer-link d-flex footer-social">
-              <li><a href="#" class="p-2"><span class="fa fa-twitter"></span></a></li>
-              <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
-              <li><a href="#" class="p-2"><span class="fa fa-linkedin"></span></a></li>
-              <li><a href="#" class="p-2"><span class="fa fa-instagram"></span></a></li>
-            </ul>
-
-          </div>
           <div class="col-md-4 mb-5 pl-md-5 offset-md-1">
             <h3>Contacto</h3>
             <p>Realizar la consulta, el requerimiento o el pedido de cotización, a la brevedad nos pondremos en contacto.</p>
@@ -274,7 +263,18 @@
                 <a href="mailto:info@dagsrl.com.ar">info@dagsrl.com.ar</a>
               </li>
             </ul>
+          </div>  
+          <div class="col-md-4 mb-5 offset-md-2">
+            <h3>About Us</h3>
+            <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. .</p>
+            <ul class="list-unstyled footer-link d-flex footer-social">
+              <li><a href="#" class="p-2"><span class="fa fa-twitter"></span></a></li>
+              <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
+              <li><a href="#" class="p-2"><span class="fa fa-linkedin"></span></a></li>
+              <li><a href="#" class="p-2"><span class="fa fa-instagram"></span></a></li>
+            </ul>
           </div>
+        
         </div>
         <div class="row">
           <div class="col-12 text-md-center text-left">
