changes in footer contacts

--- a/index.html
+++ b/index.html
@@ -250,8 +250,10 @@
             <ul class="list-unstyled footer-link">
               <li class="d-block">
                 <span class="d-block">Contacto:</span>
-                <span >Ing. Cristian Rother. <br> cristian.rother@dagsrl.com.ar
-                </span></li>
+                <hr/>
+                <p class="h5">Ing. Cristian Rother.</p>
+                <a class="h5" href="mailto:cristian.rother@dagsrl.com.ar" style="border: none;">cristian.rother@dagsrl.com.ar</a>
+              </li>
               <li class="d-block">
                 <span class="d-block">
                   Telefono:
