--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="row justify-content-center mb-5 element-animate">
           <div class="col-md-8 text-center">
             <h2 class=" heading mb-4">Nosotros</h2>
-            <p class="mb-5 lead">Somos un equipo de profesionales (Ingenieros Industriales / MBA) con amplio recorrido en compañías multinacionales, tanto en el ámbito local como en el exterior del país. Tenemos experiencia en Supply Chain Management, Gestión de Compras, Gestión de Proyectos, Logística, Mejora de Procesos, etc</p>
+            <p class="mb-5 lead">“Somos un equipo de profesionales (Ingenieros Industriales / MBA) con amplio recorrido en compañías multinacionales, tanto en el ámbito local como en el exterior del país. Tenemos experiencia en Supply Chain Management, Gestión de Compras, Gestión de Proyectos, Logística y en Mejora de Procesos”.</p>
           </div>
         </div>
       </div>
