--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand " href="index.html">
-             <img src="./images/logoBlanco.png" alt="DAG Web Oficial"/>
+             <img src="./images/logo.png" alt="DAG Web Oficial"/>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
