--- a/index.html
+++ b/index.html
@@ -195,30 +195,30 @@
       </div>
     </section>
     <!-- Clientes -->
-    <section class="section bg-light block-11" id="clientes">
+    <section class="section  block-11" id="clientes">
       <div class="container"> 
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
             <h2 class=" heading">Clientes</h2>
           </div>
         </div>
-        <div class="nonloop-block-11 owl-carousel">
-          <div class="item">
+        <div class="row">
+          <div class="col-md-2">
             <div class="cliente-slide" style="background-image: url(./images/slides/Copelco.png);"></div>
           </div> 
-          <div class="item">
+          <div class="col-md-2">
             <div class="cliente-slide" style="background-image: url(./images/slides/Hidrocinetic.png);"></div>
           </div>  
-          <div class="item">
+          <div class="col-md-2">
             <div class="cliente-slide" style="background-image: url(./images/slides/lo.png);"></div>
           </div>  
-          <div class="item">
+          <div class="col-md-2">
             <div class="cliente-slide" style="background-image: url(./images/slides/manpetrol.jpg);"></div>
           </div>  
-          <div class="item">
+          <div class="col-md-2">
             <div class="cliente-slide" style="background-image: url(./images/slides/logo.png);"></div>
           </div>   
-          <div class="item">
+          <div class="col-md-2">
             <div class="cliente-slide" style="background-image: url(./images/slides/Burgwardt.jpg);"></div>
           </div>
         </div>
