Changes in width

--- a/index.html
+++ b/index.html
@@ -131,16 +131,19 @@
     </section>
     <!-- Pilares -->
     <section class="section" id="pilares">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row mb-5">
           <div class="col-12 text-center">
             <h2>Nuestros Pilares</h2>
           </div>
         </div>
         <div class="row align-items-stretch">
-          <div class="col-lg-4 order-lg-1">
-            <div class="h-100"><div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('images/about_1.jpg');"></div></div></div>
+          <div class="col-lg-3 order-lg-1">
+            <div class="h-100">
+              <div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('/images/slides/slide1.jpg'); background-attachment: fixed;     background-position: 90% 50%;"></div>
+            </div>
           </div>
+        </div>
 
           <div class="col-md-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-1" >
 
