--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </section>
     <!-- Pilares -->
     <section class="section" id="pilares">
-      <div class="container-fluid">
+      <div class="container-fluid" style="max-width: 1750px;">
         <div class="row mb-5">
           <div class="col-12 text-center">
             <h2>Nuestros Pilares</h2>
