change in bg position

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="row align-items-stretch">
           <div class="col-lg-3 order-lg-1">
             <div class="h-100">
-              <div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('./images/slides/slide1.jpg'); background-attachment: fixed;     background-position: -900px 50%;"></div>
+              <div class="h-100"><div class="feature-img-bg h-100 pilares-bg"></div>
             </div>
           </div>
         </div>
