Segunda tanda de correcciones - Work in progress

--- a/index.html
+++ b/index.html
@@ -100,12 +100,14 @@
         <div class="row justify-content-center mb-5 element-animate">
           <div class="col-md-8 text-center">
             <h2 class=" heading mb-4">Nosotros</h2>
-            <p class="mb-5 lead">“Somos un equipo de profesionales (Ingenieros Industriales / MBA) con amplio recorrido en compañías multinacionales, tanto en el ámbito local como en el exterior del país. Tenemos experiencia en Supply Chain Management, Gestión de Compras, Gestión de Proyectos, Logística y en Mejora de Procesos”.</p>
+            <p class="mb-5 lead">
+              Somos un equipo de profesionales (Ingenieros Industriales / MBA) con amplio recorrido en compañías multinacionales, tanto en el ámbito local como en el exterior del país. Tenemos experiencia en Supply Chain Management, Gestión de Compras, Gestión de Proyectos, Logística y Mejora de Procesos
+            </p>
           </div>
         </div>
       </div>
     </section>
-    <section class="section bg-light">
+    <section class="section bg-light pt-5 pb-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-6 element-animate ">
@@ -147,16 +149,7 @@
 
           <div class="col-md-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-1" >
 
-            <div class="feature-1 d-md-flex">
-              <div class="align-self-center">
-                <span class="ion ion-ios-paper display-4 text-primary"></span>
-                <h3>RESPONSABILIDAD 
-                </h3>
-                <p>Trabajamos con profesionalismo para alcanzar los mejores resultados.</p>
-              </div>
-            </div>
-
-            <div class="feature-1 d-md-flex">
+            <div class="feature-1 d-md-flex mb-10">
               <div class="align-self-center">
                 <span class="ion ion-android-time display-4 text-primary"></span>
                 <h3>AGILIDAD</h3>
@@ -164,7 +157,7 @@
               </div>
             </div>
 
-            <div class="feature-1 d-md-flex">
+            <div class="feature-1 d-md-flex mb-10">
               <div class="align-self-center">
                 <span class="ion ion-android-bulb display-4 text-primary"></span>
                 <h3>VERSATILIDAD</h3>
@@ -178,19 +171,28 @@
 
             <div class="feature-1 d-md-flex">
               <div class="align-self-center">
-                <span class="ion ion-android-happy display-4 text-primary"></span>
-                <h3>CONFIANZA</h3>
-                <p>Somos fiables en todas las direcciones, respetamos los compromisos y a la gente.</p>
+                <span class="ion ion-ios-paper display-4 text-primary"></span>
+                <h3>RESPONSABILIDAD 
+                </h3>
+                <p>Trabajamos con profesionalismo para alcanzar los mejores resultados.</p>
               </div>
             </div>
 
             <div class="feature-1 d-md-flex">
               <div class="align-self-center">
                 <span class="ion ion-android-hand display-4 text-primary"></span>
-                <h3>HONESTIDAD</h3>
+                <h3>COMUNICACIÓN</h3>
                 <p>Mantenemos una fluida y clara comunicación con nuestros clientes y proveedores.</p>
               </div>
             </div>
+
+            <!-- <div class="feature-1 d-md-flex">
+              <div class="align-self-center">
+                <span class="ion ion-android-happy display-4 text-primary"></span>
+                <h3>CONFIANZA</h3>
+                <p>Somos fiables en todas las direcciones, respetamos los compromisos y a la gente.</p>
+              </div>
+            </div> -->
 
           </div>
 
@@ -199,31 +201,33 @@
     </section>
     <!-- Clientes -->
     <section class="section  block-11" id="clientes">
-      <div class="container"> 
-        <div class="row justify-content-center">
+      <div class="container-fluid"> 
+        <div class="row justify-content-center mb-5">
           <div class="col-md-8 text-center">
             <h2 class=" heading">Clientes</h2>
           </div>
         </div>
+        <div class="row mb-5">
+          <div class="col-md-4">
+            <div class="cliente-slide" style="background-image: url(./images/slides/Hidrocinetic.png);"></div>
+          </div>
+          <div class="col-md-4">
+            <div class="cliente-slide" style="background-image: url(./images/slides/lo.png);"></div>
+          </div>
+          <div class="col-md-4">
+            <div class="cliente-slide" style="background-image: url(./images/slides/manpetrol.jpg);"></div>
+          </div>
+        </div>
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-4">
             <div class="cliente-slide" style="background-image: url(./images/slides/Copelco.png);"></div>
           </div> 
-          <div class="col-md-2">
-            <div class="cliente-slide" style="background-image: url(./images/slides/Hidrocinetic.png);"></div>
-          </div>  
-          <div class="col-md-2">
-            <div class="cliente-slide" style="background-image: url(./images/slides/lo.png);"></div>
-          </div>  
-          <div class="col-md-2">
-            <div class="cliente-slide" style="background-image: url(./images/slides/manpetrol.jpg);"></div>
-          </div>  
-          <div class="col-md-2">
-            <div class="cliente-slide" style="background-image: url(./images/slides/logo.png);"></div>
-          </div>   
-          <div class="col-md-2">
+          <div class="col-md-4">
             <div class="cliente-slide" style="background-image: url(./images/slides/Burgwardt.jpg);"></div>
           </div>
+          <div class="col-md-4">
+            <div class="cliente-slide" style="background-image: url(./images/slides/logo.png);"></div>
+          </div>   
         </div>
       </div>
     </div>
@@ -248,8 +252,8 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-4 mb-5 pl-md-5 offset-md-1">
-            <h3>Contacto</h3>
-            <p>Realizar la consulta, el requerimiento o el pedido de cotización, a la brevedad nos pondremos en contacto.</p>
+            <!-- <h3>Contacto</h3>
+            <p>Realizar la consulta, el requerimiento o el pedido de cotización, a la brevedad nos pondremos en contacto.</p> -->
             <ul class="list-unstyled footer-link">
               <li class="d-block">
                 <span class="d-block">Contacto:</span>
@@ -270,14 +274,7 @@
             </ul>
           </div>  
           <div class="col-md-4 mb-5 offset-md-2">
-            <h3>About Us</h3>
-            <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. .</p>
-            <ul class="list-unstyled footer-link d-flex footer-social">
-              <li><a href="#" class="p-2"><span class="fa fa-twitter"></span></a></li>
-              <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
-              <li><a href="#" class="p-2"><span class="fa fa-linkedin"></span></a></li>
-              <li><a href="#" class="p-2"><span class="fa fa-instagram"></span></a></li>
-            </ul>
+            <!-- To be defined -->
           </div>
         
         </div>
