--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </ul>
           </div>  
           <div class="col-md-4 mb-5 offset-md-2">
-            <!-- To be defined -->
+            <!-- ACA VA EL LOCO DE LA EMPRESA IMA -->
           </div>
         
         </div>
