--- a/index.html
+++ b/index.html
@@ -274,6 +274,9 @@
             </ul>
           </div>  
           <div class="col-md-4 mb-5 offset-md-2">
+            <a class="navbar-brand " href="index.html">
+              <img src="./images/logo.png" alt="DAG Web Oficial"/>
+           </a>
             <!-- ACA VA EL LOCO DE LA EMPRESA IMA -->
           </div>
         
