Logo Wsp en footer

--- a/index.html
+++ b/index.html
@@ -262,9 +262,10 @@
                 <a class="h5" href="mailto:cristian.rother@dagsrl.com.ar" style="border: none;">cristian.rother@dagsrl.com.ar</a>
               </li>
               <li class="d-block">
-                <span class="d-block">
+                <span class="d-block mb-2">
                   Telefono:
                 </span>
+                <i class="fa fa-whatsapp fa-2x logowsp mr-2"></i>
                 <a href="http://wa.link/hd56lb" target="_blank">+54 9 221 317-2945</a>
               </li>
               <li class="d-block">
