Mobile bg  fix 2

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     </header>
     <!-- Slider Home-->
     <div class="top-shadow"></div>
-      <section class="home-slider owl-carousel"id="top">   
+    <div class="home-slider-wrapper">
+      <section class="home-slider owl-carousel"id="top">
         <div class="slider-item" >
           <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
@@ -93,6 +94,7 @@
           </div>
         </div>
       </section>
+    </div>
     </div>
     <!-- Nostros -->
     <section class="section border-t pb-0" id="nosotros">
