Mobile bg fix 3

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <!-- Slider Home-->
     <div class="top-shadow"></div>
     <div class="home-slider-wrapper">
-      <section class="home-slider owl-carousel"id="top">
+      <img src="./images/slides/slide1.jpg" class="home-slider-bg-image" alt="Slider BG">
+      <section class="home-slider owl-carousel" id="top">
         <div class="slider-item" >
           <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
@@ -94,7 +95,6 @@
           </div>
         </div>
       </section>
-    </div>
     </div>
     <!-- Nostros -->
     <section class="section border-t pb-0" id="nosotros">
