--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Back to top button -->
     <a id="button"></a>
     <!-- Slider -->
-    <header role="banner">
+    <header role="banner" class="header-nav">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand " href="index.html">
