--- a/index.html
+++ b/index.html
@@ -308,11 +308,8 @@
               </li>
             </ul>
           </div>  
-          <div class="col-md-4 mb-5 offset-md-2">
-            <a class="navbar-brand " href="index.html">
-              <img src="./images/logo.png" alt="DAG Web Oficial"/>
-           </a>
-            <!-- ACA VA EL LOCO DE LA EMPRESA IMA -->
+          <div class="col-md-4 mb-5 offset-md-2 text-center">
+              <img src="./images/logo.png" alt="DAG Web Oficial" class="brand-footer"/>
           </div>
         
         </div>
