--- a/index.html
+++ b/index.html
@@ -309,7 +309,13 @@
             </ul>
           </div>  
           <div class="col-md-4 mb-5 offset-md-2 text-center">
-              <img src="./images/logo.png" alt="DAG Web Oficial" class="brand-footer"/>
+            <img src="./images/logo.png" alt="DAG Web Oficial" class="brand-footer"/>
+            <ul class="list-unstyled footer-link d-flex footer-social justify-content-center">
+              <li><a href="https://twitter.com/DAGSRL1" class="p-2" target="_blank"><span class="fa fa-twitter"></span></a></li>
+              <li><a href="https://www.facebook.com/DAG-SRL-100314505097625" class="p-2" target="_blank"><span class="fa fa-facebook"></span></a></li>
+              <li><a href="https://linkedin.com/company/dag-srl-lp" class="p-2" target="_blank"><span class="fa fa-linkedin"></span></a></li>
+              <li><a href="https://www.instagram.com/dag.srl/" target="_blank" class="p-2"><span class="fa fa-instagram"></span></a></li>
+            </ul>
           </div>
         
         </div>
