Nuevo contacto agregado, acento en telefono, y punto en seccion Nosotros

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="col-md-8 text-center">
             <h2 class=" heading mb-4">Nosotros</h2>
             <p class="mb-5 lead">
-              Somos un equipo de profesionales (Ingenieros Industriales / MBA) con amplio recorrido en compañías multinacionales, tanto en el ámbito local como en el exterior del país. Tenemos experiencia en Supply Chain Management, Gestión de Compras, Gestión de Proyectos, Logística y Mejora de Procesos
+              Somos un equipo de profesionales (Ingenieros Industriales / MBA) con amplio recorrido en compañías multinacionales, tanto en el ámbito local como en el exterior del país. Tenemos experiencia en Supply Chain Management, Gestión de Compras, Gestión de Proyectos, Logística y Mejora de Procesos.
             </p>
           </div>
         </div>
@@ -182,7 +182,7 @@
 
             <div class="feature-1 d-md-flex">
               <div class="align-self-center">
-                <span class="ion ion-android-hand display-4 text-primary"></span>
+                <span class="ion fa fa-bullhorn display-4 text-primary"></span>
                 <h3>COMUNICACIÓN</h3>
                 <p>Mantenemos una fluida y clara comunicación con nuestros clientes y proveedores.</p>
               </div>
@@ -292,15 +292,32 @@
               <li class="d-block">
                 <span class="d-block">Contacto:</span>
                 <hr/>
-                <p class="h5">Ing. Cristian Rother.</p>
+                <p class="h5">Ing. Cristian Rother</p>
                 <a class="h5" href="mailto:cristian.rother@dagsrl.com.ar" style="border: none;">cristian.rother@dagsrl.com.ar</a>
               </li>
               <li class="d-block">
                 <span class="d-block mb-2">
-                  Telefono:
+                  Teléfono:
                 </span>
                 <i class="fa fa-whatsapp fa-2x logowsp mr-2"></i>
                 <a href="http://wa.link/hd56lb" target="_blank">+54 9 221 317-2945</a>
+              </li>
+              <li class="d-block">
+                <span class="d-block">Otro Medio:</span>
+                <a href="mailto:info@dagsrl.com.ar">info@dagsrl.com.ar</a>
+              </li>
+              <li class="d-block">
+                <span class="d-block">Contacto:</span>
+                <hr/>
+                <p class="h5">Ing. Gerardo Cazau</p>
+                <a class="h5" href="mailto:cristian.rother@dagsrl.com.ar" style="border: none;">gcazau@dagsrl.com.ar</a>
+              </li>
+              <li class="d-block">
+                <span class="d-block mb-2">
+                  Teléfono:
+                </span>
+                <i class="fa fa-whatsapp fa-2x logowsp mr-2"></i>
+                <a href="http://wa.link/hd56lb" target="_blank">+54 9 221 545-4890</a>
               </li>
               <li class="d-block">
                 <span class="d-block">Otro Medio:</span>
