correccion de hipervinculos

--- a/index.html
+++ b/index.html
@@ -302,25 +302,22 @@
                 <i class="fa fa-whatsapp fa-2x logowsp mr-2"></i>
                 <a href="http://wa.link/hd56lb" target="_blank">+54 9 221 317-2945</a>
               </li>
-              <li class="d-block">
-                <span class="d-block">Otro Medio:</span>
-                <a href="mailto:info@dagsrl.com.ar">info@dagsrl.com.ar</a>
-              </li>
+             
               <li class="d-block">
                 <span class="d-block">Contacto:</span>
                 <hr/>
                 <p class="h5">Ing. Gerardo Cazau</p>
-                <a class="h5" href="mailto:cristian.rother@dagsrl.com.ar" style="border: none;">gcazau@dagsrl.com.ar</a>
+                <a class="h5" href="mailto:gcazau@dagsrl.com.ar" style="border: none;">gcazau@dagsrl.com.ar</a>
               </li>
               <li class="d-block">
                 <span class="d-block mb-2">
                   Teléfono:
                 </span>
                 <i class="fa fa-whatsapp fa-2x logowsp mr-2"></i>
-                <a href="http://wa.link/hd56lb" target="_blank">+54 9 221 545-4890</a>
+                <a href= "http://wa.link/alw9i2" target="_blank">+54 9 221 545-4890</a>
               </li>
               <li class="d-block">
-                <span class="d-block">Otro Medio:</span>
+                <span class="d-block">Otro medio:</span>
                 <a href="mailto:info@dagsrl.com.ar">info@dagsrl.com.ar</a>
               </li>
             </ul>
